--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-whitelist": "1.3.3",
         "firebase": "^7.17.2",
+        "firebaseui": "^4.6.1",
+        "firebaseui-ja": "^1.0.0",
         "monaca-plugin-monaca-core": "3.3.0",
         "onsenui": "2.10.8",
         "vue": "^2.6.10",
