--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "cordova-custom-config": "5.1.0",
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-whitelist": "1.3.3",
-        "firebase": "^7.17.2",
+        "firebase": "^7.19.0",
         "firebaseui": "^4.6.1",
         "firebaseui-ja": "^1.0.0",
         "monaca-plugin-monaca-core": "3.3.0",
@@ -14,7 +14,9 @@
         "vue": "^2.6.10",
         "vue-nl2br": "^0.1.2",
         "vue-onsenui": "^2.6.2",
-        "vue-router": "^3.4.2"
+        "vue-router": "^3.4.2",
+        "vue2-filters": "^0.11.0",
+        "vuefire": "^2.2.0-alpha.0"
     },
     "scripts": {
         "monaca:preview": "npm run dev & npm run watch",
